PROJECT(MorseUSB C)
CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

SET(DFU_BIN ${CMAKE_SOURCE_DIR}/../TOOLS/dfu-programmer)

SET(CMAKE_VERBOSE_MAKEFILE 0)
SET(CMAKE_SYSTEM_NAME Linux)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(CMAKE_C_COMPILER "avr-gcc")
SET(CMAKE_LINKER "avr-ld")
SET(CMAKE_OBJCOPY "avr-objcopy")
SET(CMAKE_SIZE "avr-size")

SET(MCU "atmega16u2")
SET(CPU "16000000UL")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g -ggdb")
SET(CMAKE_C_FLAGS_RELEASE "-O2 -g")

SET(MCU_FLAGS " -Wall -mmcu=${MCU} ")
SET(CMAKE_C_FLAGS "${MCU_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,-Map,${PROJECT_NAME}.map")
SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")

ADD_DEFINITIONS(-DF_CPU=${CPU})
SET(SRC main.c cwdecode.c)

ADD_EXECUTABLE(${PROJECT_NAME}.elf ${SRC})


ADD_CUSTOM_COMMAND(DEPENDS ${PROJECT_NAME}.elf OUTPUT ${PROJECT_NAME}.hex COMMAND ${CMAKE_OBJCOPY} -Oihex ${PROJECT_NAME}.elf ${PROJECT_NAME}.hex)
ADD_CUSTOM_TARGET(erase ${DFU_BIN} ${MCU} erase)
ADD_CUSTOM_TARGET(launch ${DFU_BIN} ${MCU} launch --no-reset)
ADD_CUSTOM_TARGET(flash ${DFU_BIN} ${MCU} flash --force ${PROJECT_NAME}.hex DEPENDS ${PROJECT_NAME}.hex)
